# qwen3_0.6b_for_taxi_v3

./: .env.example  .gitignore  README.md  diagnose.py  pyproject.toml  requirements.txt  run_pipeline.py  speed_test.py
backend/: __init__.py  main.py
backend/llm/: __init__.py  client.py  explanation_generator.py
backend/taxi/: __init__.py  action_utils.py  environment.py  prompt_builder.py  rl_agent.py  state_utils.py
config/: __init__.py  settings.py
frontend/static/css/: styles.css
frontend/static/js/: app.js
frontend/templates/: index.html
tests/: test_state_utils.py
train/: colab_qwen_eval.ipynb  rl_agent_train.ipynb  test.ipynb
